# llm-game-evals

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  download_quests.sh  pyproject.toml
.github/workflows/: ci.yml
results/runs/: all_runs.jsonl
results/runs/20251223_162839_google_gemini-3-flash-preview_Muzon_eng/: summary.json
results/runs/20251223_223221_moonshotai_kimi-k2-thinking_Muzon_eng/: summary.json
results/runs/20251227_223054_google_gemini-3-pro-preview_Muzon_eng/: summary.json
results/runs/20251229_140729_anthropic_claude-sonnet-4.5_player_eng/: summary.json
results/runs/20251229_141518_google_gemini-3-pro-preview_player_eng/: summary.json
results/runs/20251229_142337_anthropic_claude-opus-4.5_player_eng/: summary.json
results/runs/20251229_143043_openai_gpt-5.2_player_eng/: summary.json
results/runs/20251229_143443_openai_gpt-5.2_player_eng/: summary.json
results/runs/20251229_152353_openai_gpt-5.2_Jumper_eng/: summary.json
results/runs/20251229_154434_openai_gpt-5.2_Jumper_eng/: summary.json
results/runs/20251229_164634_anthropic_claude-opus-4.5_Jumper_eng/: summary.json
results/runs/20251229_172231_anthropic_claude-sonnet-4.5_Jumper_eng/: summary.json
scripts/: visualize_quest_progress.py  visualize_results.py
src/quest_evals/: __init__.py  checkpoint.py  cli.py  convert.py  formula.py  llm.py  loader.py  model_configs.py  models.py  play.py  player.py  qm_parser.py  quest_json.py  results.py  runner.py  verify_json.py
tests/: __init__.py  conftest.py  test_checkpoint.py  test_model_configs_integration.py
(+208 files in other folders)
